# the_jewish_trading_bot

./: .gitignore  .vercelignore  README.md  asgi.py  pyproject.toml  requirements-vps.txt  requirements.txt  vercel.json
api/: app.py
dashboard/: app.py
deploy/: install_systemd_services.sh  tjtb-live.service
deploy/systemd/: tjtb-coinbase-recorder.service  tjtb-dashboard.service  tjtb-live-paper.service
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
reports/: failed_absorption_continuation_study.py
scripts/: export_latest_trade_context.py  export_latest_trade_context_fast.py  live_stack.sh  run_api_server.sh  run_bybit_recorder.sh  run_live_stack.sh  run_replay.py  session_report.py  train_baseline.py
scripts/dashboard/: run_dashboard.py
scripts/diagnostics/: bybit_feature_parity.py  full_check.py  runtime_check.py
scripts/recorder/: coinbase_recorder.py
src/the_jewish_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tjtb/: __init__.py  runtime_paths.py
src/tjtb/api/: __init__.py  (+1 more)
tests/: test_build_features_timestamp.py  test_bybit_execution_guards.py  test_bybit_feature_parity.py  test_bybit_normalization.py  test_eth_geometry_runner.py  test_expected_value.py  test_export_trade_context_smoke.py  test_failed_absorption_continuation_study.py  test_labels.py  test_live_bybit_source.py  test_parse_bybit.py  test_position_sizing.py  test_queue_imbalance.py  test_replay.py  test_risk.py  test_stop_grid_runner.py  test_true_failed_absorption_study.py
(+88 files in other folders)
